# edu-platform

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  Dockerfile.api  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  frontend.yml
adr/: 0001-modular-monolith.md  0002-python-ai-core.md
alembic/: env.py
alembic/versions/: 0001_phase2_domain_data.py  0002_phase3_ingestion.py  0003_phase4_search_crawl.py  0004_phase5_research_engine.py  0005_phase6_evidence_knowledge.py  0006_phase7_course_generation.py  0007_phase8_question_engine.py  0008_phase9_evaluation.py
apps/: __init__.py
apps/api/app/: __init__.py  main.py
apps/web/: .env.example  FRONTEND_API_LIMITATIONS.md  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/api/: client.ts  learner.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: admin-data.tsx  learner.tsx  page.tsx  phase10c.tsx  primitives.tsx  providers.tsx  studio-shell.tsx
apps/web/lib/: auth.ts  config.ts  (+1 more)
codex/: MASTER_PROMPT.md
codex/phases/: 01_FOUNDATION.md  02_DOMAIN_DATA.md  03_INGESTION.md  04_SEARCH_CRAWL.md  05_RESEARCH_ENGINE.md  06_EVIDENCE_KNOWLEDGE.md  07_COURSE_GENERATION.md  08_QUESTION_ENGINE.md  09_EVALUATION.md  10_ADMIN_WEB.md  11_LEARNER_WEB.md  12_PRODUCTION.md
config/: agribank-cntt.yaml  domain-template.yaml
docs/: 00_PRODUCT_VISION.md  01_SYSTEM_ARCHITECTURE.md  02_RESEARCH_PIPELINE.md  03_DATA_MODEL.md  04_API_SPEC.md  05_AI_WORKFLOWS.md  06_SECURITY_AND_LEGAL.md  07_EVALUATION.md  08_UI_SPEC.md  09_ROADMAP.md  deferred-verification.md  production-operations.md
docs/adr/: 001-search-fusion.md  0010-admin-web-stack.md  002-url-canonicalization.md  003-robots-failure-policy.md  004-source-lineage.md  005-browser-default-off.md  006-langgraph-workflow-port.md  007-research-checkpoints.md  008-budget-authority.md  009-candidate-observations.md  010-model-prompt-versioning.md  011-deterministic-confidence.md  012-relational-skill-graph.md  013-immutable-evidence-links.md  014-claim-versioning.md  015-source-independence-clustering.md  016-human-review-history.md  017-generated-content-block-model.md  018-course-rollback-semantics.md  019-citation-immutability.md  020-human-authored-protection.md  021-confidence-classification.md  022-curriculum-planner-port.md  023-question-quality-gates.md  024-deterministic-evaluation-authority.md  025-deepeval-adapter.md  026-versioned-golden-datasets.md  027-versioned-quality-gates.md  028-baseline-compatibility.md  029-append-only-evaluation-results.md  030-learner-route-and-safety.md  031-learner-version-pinning.md  032-simple-skill-summary.md  033-production-hardening-boundaries.md
docs/phase-notes/: 01_FOUNDATION.md  02-domain-data.md  03-ingestion.md  04-search-and-crawling.md  05-research-engine.md  06-evidence-and-knowledge.md  07-course-generation.md  08-question-engine.md  08-question-safeguards-fix.md  09-evaluation.md  10-admin-web.md  10-frontend-ci-verification.md  10-frontend-verification.md  10b-research-evidence-admin.md  10c-course-question-evaluation-admin.md  11-learner-web.md  12-production-hardening.md
evals/agribank/: research_cases.jsonl
evals/course/: course_cases.jsonl
evals/questions/: question_cases.jsonl
evals/retrieval/: retrieval_cases.jsonl
load/: phase12-smoke.js
prompts/: curriculum_planner.md  evidence_extractor.md  question_generator.md  question_reviewer.md  research_planner.md  source_critic.md
schemas/: course.schema.json  question.schema.json  research_report.schema.json  source.schema.json
scripts/: render-build.sh
starter/: .env.example  Makefile  alembic.ini  pyproject.toml
starter/alembic/: env.py
starter/alembic/versions/: 0001_domain_data.py
starter/apps/api/app/: main.py
starter/apps/worker/worker/: celery_app.py
starter/tests/: test_api.py  test_domain.py  test_postgresql_integration.py  test_repositories.py
tests/: __init__.py  test_course_phase7.py  test_domain_phase2.py  test_evaluation_phase9.py  test_evidence_api_phase6.py  test_evidence_phase6.py  test_health.py  test_ingestion.py  test_production_phase12.py  test_questions_phase8.py  test_research_phase5.py  test_search_phase4.py  test_settings.py  test_worker.py
(+71 files in other folders)
