[project]
name = "ai-course-research-platform"
version = "0.1.0"
description = "AI Research & Assessment Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4,<6",
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "redis>=5.2,<6",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24.4,<26",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "uvicorn[standard]>=0.32,<1",
  "python-multipart>=0.0.18,<1",
  "minio>=7.2,<8",
  "pgvector>=0.3,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.2,<1",
]

[project.optional-dependencies]
docling = ["docling>=2,<3"]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
files = ["apps", "packages", "tests"]
strict = true
exclude = ["starter"]

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docling.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.api.app.main", "packages.application.services", "packages.infrastructure.memory", "packages.infrastructure.persistence.models"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["packages.infrastructure.search", "tests.test_search_phase4", "tests.test_health", "alembic.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["packages.application.evidence", "packages.infrastructure.evidence"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.test_evidence_phase6"]
ignore_errors = true

[tool.ruff.lint.per-file-ignores]
"packages/application/course.py" = ["F403", "F405", "E741"]
"packages/infrastructure/course.py" = ["E741"]
"tests/test_course_phase7.py" = ["E741"]
"packages/domain/question.py" = ["E501", "E701", "E702"]
"packages/application/questions.py" = ["E501", "E701", "E702", "F401", "F403", "F405", "I001"]
"packages/infrastructure/question.py" = ["E501", "E701", "E702", "F403", "F405", "I001"]
"tests/test_questions_phase8.py" = ["E501", "E701", "E702", "I001"]
"apps/api/app/main.py" = ["E501", "I001"]
"alembic/versions/0007_phase8_question_engine.py" = ["E501", "E701", "E702"]

[[tool.mypy.overrides]]
module = ["packages.application.course", "packages.infrastructure.course", "tests.test_course_phase7", "alembic.versions.0006_phase7_course_generation"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["packages.domain.question", "packages.application.questions", "packages.infrastructure.question", "tests.test_questions_phase8", "alembic.versions.0007_phase8_question_engine"]
ignore_errors = true
