[project]
name = "ai-course-research-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "sqlalchemy[asyncio]>=2",
  "asyncpg",
  "alembic",
  "redis",
  "celery",
  "httpx",
  "structlog",
  "python-multipart",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "aiosqlite",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "packages/domain", "packages/infrastructure"]
markers = ["integration: requires PostgreSQL and external infrastructure"]

[tool.mypy]
python_version = "3.12"
files = ["apps", "packages"]
ignore_missing_imports = true
strict = true
